# KnowledgeExplorer

./: .gitignore  README.md  ctranslate.sh  main.py  pyproject.toml  requirements.txt  temp.py
data/sample/: 20230101.md  20230102.md  20230103.md  20230104.md  20230105.md  20230106.md  20230107.md
doc_explanation/: __init__.py  app.py  cli.py  local_app.py  main.py  run.py
doc_explanation/answer/: answer_format.py  prompt.py
doc_explanation/answer/model/: base_model.py  ctranslate.py
doc_explanation/common/: arg_parser.py  config_manager.py  log_handler.py  remove_noise.py
doc_explanation/config/: config.yaml
doc_explanation/search/doc_search/: document.py  make_query.py  preprocess.py  query.py  search.py  sentence.py
doc_explanation/search/vec_search/: basic.py  index.py  search.py
knowledge_explorer/: __init__.py  app.py  cli.py  local_app.py  run.py
knowledge_explorer/answer/model/: base_model.py  ctranslate.py
knowledge_explorer/common/: read_md.py
knowledge_explorer/config/: config.yaml
knowledge_explorer/search/doc_search/: query.py  search.py  sentence.py
knowledge_explorer/search/vec_search/: basic.py  index.py  search.py
template/: template.md
