[tool.poetry]
name = "doc-explanation"
version = "0.1.0"
description = ""
authors = ["jumtras <data0science0acc@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_explanation"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.32.0"
torch = {version = "^2.0.1+cu117", source = "torch_cu117"}
torchvision = {version = "^0.15.2+cu117", source = "torch_cu117"}
torchaudio = {version = "^2.0.2+cu117", source = "torch_cu117"}
omegaconf = "^2.3.0"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
janome = "^0.5.0"
ctranslate2 = "^3.18.0"


[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[tool.poetry.scripts]
doc_explain = "doc_explanation.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 110
profile = "black"
known_first_party = "doc_explanation/"

[tool.mypy]
files = [
    "doc_explanation",
]
ignore_missing_imports = true

[tool.black]
line-length=150